Enables mobile controls hints, fixes spacing on mobile, focus rectangle

--- a/app/globals.css
+++ b/app/globals.css
@@ -135,3 +135,12 @@
     visibility: visible;
   }
 }
+
+@keyframes spinX {
+  0% {
+    transform: rotateX(0deg);
+  }
+  100% {
+    transform: rotateX(360deg);
+  }
+}
